*
* 0.1.15
*

- Fixed server crash at forced poll time
- Fixed critical bug in upgrade script starter under UNIX
- Added support of HDD temperature monitoring under Windows and Linux
- Added PhysicalDisk.Model, PhysicalDisk.SerialNumber and
  PhysicalDisk.Firmware parameters under Windows


*
* 0.1.14
*

- Parameters System.Memory.* behaves correctly under Windows
- Fixed bug in loading of NetworkService objects from database
- Fixed bug in interface status detection via NetXMS agent
- Added support for NAT'ed nodes (correct interface polling, etc.)
- Backslash (\) character is no longer works as escape character
  inside parameter arguments enclosed in quotes
- Windows console: object tree works correctly for users without rights
  on root objects
- Windows console: implemented user deletion from access lists
- Implemented action delete
- Windows agent deployment packages now built with InnoSetup
- "Last Values" view added to Windows console
- Fixed issue #0000008
- Added interface for SMS drivers
- Optimized access to collected DCI data in database
- Added support for System.CPU.LoadAvg to Solaris subagent
- Added support for all Net.Interface.* parameters to Solaris subagent


*
* 0.1.13
*

- Fixed bug which cause server to hang when deleting unreacheable node
- Added basic checking of node and interface objects to nxdbmgr


*
* 0.1.12
*

- Added new object class - NetworkService, for simplified network service
  health checking
- Server internal synchronization mechanisms improved to increase
  stability and performance
- Fixed deadlock sometimes caused by retrieving DCI collected data
- Added parameters System.Hostname, System.Uname and System.Uptime to
  Solaris subagent
- Object status now recalculated after binding change
- Implemented primary IP address selection for nodes
- Added OSPF support detection
- Fixed bug with StartupDelay parameter handling in core agent
- Fixed communication problems on FreeBSD
- Bug #0000003 fixed