@@ -27,8 +27,10 @@
 // Hanlder functions
 //
 
+LONG H_CPUCount(char *pszParam, char *pArg, char *pValue);
 LONG H_DiskInfo(char *pszParam, char *pArg, char *pValue);
 LONG H_Hostname(char *pszParam, char *pArg, char *pValue);
+LONG H_KStat(char *pszParam, char *pArg, char *pValue);
 LONG H_LoadAvg(char *pszParam, char *pArg, char *pValue);
 LONG H_NetIfList(char *pszParam, char *pArg, NETXMS_VALUES_LIST *pValue);
 LONG H_NetIfAdminStatus(char *pszParam, char *pArg, char *pValue);
@@ -86,10 +88,12 @@ static NETXMS_SUBAGENT_PARAM m_parameters[] =
    { "Process.KernelTime(*)", H_ProcessInfo, (char *)PROCINFO_KTIME, DCI_DT_UINT64, "" },
    { "Process.PageFaults(*)", H_ProcessInfo, (char *)PROCINFO_PF, DCI_DT_UINT64, "" },
    { "Process.UserTime(*)", H_ProcessInfo, (char *)PROCINFO_UTIME, DCI_DT_UINT64, "" },
+	{ "System.CPU.Count", H_CPUCount, NULL, DCI_DT_UINT, "Number of CPU in the system" },
    { "System.CPU.LoadAvg", H_LoadAvg, (char *)0, DCI_DT_FLOAT, "Average CPU load for last minute" },
    { "System.CPU.LoadAvg5", H_LoadAvg, (char *)1, DCI_DT_FLOAT, "Average CPU load for last 5 minutes" },
    { "System.CPU.LoadAvg15", H_LoadAvg, (char *)2, DCI_DT_FLOAT, "Average CPU load for last 15 minutes" },
    { "System.Hostname", H_Hostname, NULL, DCI_DT_STRING, "Host name" },
+   { "System.KStat(*)", H_KStat, NULL, DCI_DT_STRING, "" },
    { "System.ProcessCount", H_SysProcCount, NULL, DCI_DT_INT, "Total number of processes" },
    { "System.Uname", H_Uname, NULL, DCI_DT_STRING, "System uname" },
    { "System.Uptime", H_Uptime, NULL, DCI_DT_UINT, "System uptime" }
