@@ -70,6 +70,7 @@ typedef struct t_ProcEnt
 //
 
 int mac_addr_dlpi(char *pszIfName, u_char *pMacAddr);
+LONG ReadKStatValue(char *pszModule, LONG nInstance, char *pszName, char *pszStat, char *pValue);
 
 
 #endif
