@@ -146,3 +146,105 @@ LONG H_LoadAvg(char *pszParam, char *pArg, char *pValue)
 
 	return nRet;
 }
+
+
+//
+// Handler for System.KStat(*)
+//
+
+LONG H_KStat(char *pszParam, char *pArg, char *pValue)
+{
+	char *eptr, szModule[128], szName[128], szInstance[16], szStat[128];
+	LONG nInstance;
+
+	// Read parameters
+	if ((!NxGetParameterArg(pszParam, 1, szModule, 128)) ||
+		 (!NxGetParameterArg(pszParam, 2, szInstance, 16)) ||
+		 (!NxGetParameterArg(pszParam, 3, szName, 128)) ||
+		 (!NxGetParameterArg(pszParam, 4, szStat, 128)))
+		return SYSINFO_RC_UNSUPPORTED;
+
+	if (szInstance[0] != 0)
+	{
+		nInstance = strtol(szInstance, &eptr, 0);
+		if (*eptr != 0)
+			return SYSINFO_RC_UNSUPPORTED;
+	}
+	else
+	{
+		nInstance = 0;
+	}
+
+	return ReadKStatValue(szModule, nInstance, szName, szStat, pValue);
+}
+
+
+//
+// Handler for System.CPU.Count
+//
+
+LONG H_CPUCount(char *pszParam, char *pArg, char *pValue)
+{
+	return ReadKStatValue("unix", 0, "system_misc", "ncpus", pValue);
+}
+
+
+//
+// Handler for generic kstat parameter
+//
+
+LONG ReadKStatValue(char *pszModule, LONG nInstance, char *pszName, char *pszStat, char *pValue)
+{
+	kstat_ctl_t *kc;
+	kstat_t *kp;
+	kstat_named_t *kn;
+	LONG nRet = SYSINFO_RC_ERROR;
+
+	// Open kstat
+	kc = kstat_open();
+	if (kc != NULL)
+	{
+		kp = kstat_lookup(kc, pszModule, nInstance, pszName);
+		if (kp != NULL)
+		{
+			if(kstat_read(kc, kp, 0) != -1)
+			{
+				kn = (kstat_named_t *)kstat_data_lookup(kp, pszStat);
+				if (kn != NULL)
+				{
+               switch(kn->data_type)
+               {
+                  case KSTAT_DATA_CHAR:
+                     ret_string(pValue, kn->value.c);
+                     break;
+                  case KSTAT_DATA_INT32:
+                     ret_int(pValue, kn->value.i32);
+                     break;
+                  case KSTAT_DATA_UINT32:
+                     ret_uint(pValue, kn->value.ui32);
+                     break;
+                  case KSTAT_DATA_INT64:
+                     ret_int64(pValue, kn->value.i64);
+                     break;
+                  case KSTAT_DATA_UINT64:
+                     ret_uint64(pValue, kn->value.ui64);
+                     break;
+                  case KSTAT_DATA_FLOAT:
+                     ret_double(pValue, kn->value.f);
+                     break;
+                  case KSTAT_DATA_DOUBLE:
+                     ret_double(pValue, kn->value.d);
+                     break;
+                  default:
+                     ret_int(pValue, 0);
+							break;
+               }
+					nRet = SYSINFO_RC_SUCCESS;
+				}
+			}
+		}
+		kstat_close(kc);
+	}
+
+	return nRet;
+}
